# CXX

BASICS/FileIO/readFileFromTXT/: CMakeLists.txt  main.cpp
BASICS/FileIO/writeDataToBinary/: CMakeLists.txt  main.cpp  myClass.cpp  myClass.h
BASICS/Pointers/copyAssignmentCtor/: CMakeLists.txt  myClass.h
BASICS/Template/: CMakeLists.txt  main.cpp  templateHeritance.cpp  templateHeritance.h
DesignPattern/Strategy/: CMakeLists.txt  TaxStrategyInc.h  main.cpp
DesignPattern/StrategyWithFactory/: CN_TaxStrategy.h  Context.h  TaxStrategy.h
DesignPattern/visitChildFromBase/: arrayOperation.h
